test/Fail/Issue7998VariableInstance.err
Issue7998VariableInstance.agda:6.3: error: [ParseError]
instance<ERROR> 
    X : Set

-- WAS: 'instanc...
